<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 MyMenu, Inc.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see [http://www.gnu.org/licenses/].
  -->
<resources>

  <!-- Guest Mode -->
  <string name="guest_user">guest@mymenu.ca</string>


  <!-- Main Activity -->
  <string name="logout">Logout</string>
  <string name="login_signup">Login/SignUp</string>

  <!-- Login Activity -->
  <string name="sign_up">Sign Up</string>
  <string name="login">Login</string>
  <string name="password">Password</string>
  <string name="email">Email</string>
  <string name="required">Required</string>
  <string name="password_length">Password too short</string>
  <string name="login_fail">Could not login. Please Check your credentials.</string>
  <string name="invalid">Invalid</string>

  <!-- Sign Up Activity -->
  <string name="confirm_password">Confirm Password</string>
  <string name="given_name">Given Name</string>
  <string name="surname">Surname</string>
  <string name="locality">Locality</string>
  <string name="city">City</string>
  <string name="birthday">Birthday</string>
  <string name="gender">Gender</string>
  <string name="edmonton">Edmonton</string>
  <string name="alberta">Alberta</string>
  <string name="bc">British Colombia</string>
  <string name="sask">Saskatchewan</string>
  <string name="mani">Manitoba</string>
  <string name="ontario">Ontario</string>
  <string name="quebec">Quebec</string>
  <string name="nwt">North West Territories</string>
  <string name="yuk">Yukon</string>
  <string name="nunavut">Nunavut</string>
  <string name="nfld">Newfoundland</string>
  <string name="novascot">Nova Scotia</string>
  <string name="pei">Prince Edward Island</string>
  <string name="newb">New Brunswick</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="passwords_do_not_match">Passwords Do Not Match</string>
  <string name="birthday_required">Birthday Required</string>
  <string name="city_required">City Required</string>
  <string name="unspecified">Unspecified</string>

  <!-- Dietary Preferences Fragment -->
  <string name="save">Save</string>
  <string name="reviews">Reviews</string>
  <string name="dietary_preferences">Preferences</string>

  <!-- Menu Items Grid Fragment -->
  <string name="share_restaurant">Check out %1$s! - %2$s</string>

  <!-- Menu Item Activity -->
  <string name="modifications">Modifications</string>
  <string name="spam">Spam</string>
  <string name="dislike">Dislike</string>
  <string name="like">Like</string>
  <string name="share">Share</string>
  <string name="share_menu_item">%1$s at %2$s - %3$s</string>
  <string name="modification_text_format">• %1$s</string>

  <!-- Reviews Fragment -->
  <string name="date">Date</string>
  <string name="rating">Rating</string>
  <string name="like_count">Like Count</string>
  <string name="sort">Sort</string>
  <string name="rate_button">Rate</string>
  <string name="cancel_button">Cancel</string>

  <!-- Restaurant List Fragment -->
  <string name="restaurants">Restaurants</string>

  <!-- Restaurant Map Fragment -->
  <string name="map">Map</string>

  <!-- Main Activity -->
  <string name="search">Search</string>
  <string name="restaurant_search_hint">Search...</string>
  <string name="drawer_close">Drawer Close</string>
  <string name="drawer_open">Drawer Open</string>
  <string name="distance">Distance</string>
  <string name="top_rated">Top Rated</string>
  <string name="cuisine">Cuisine</string>

  <!-- Restaurant Grid Fragment -->
  <string name="kilometres">%1$.1f km</string>
  <string name="metres">%1$.0f m</string>

  <!-- Specials Fragment -->
  <string name="specials">Specials</string>
  <string name="date_range_text">Displaying specials between %1$s and %2$s</string>
  <string name="date_range_prompt">Select an end date.</string>
  <string name="filter_drinks">Drinks</string>
  <string name="filter_entrees">Entrees</string>
  <string name="filter_desserts">Desserts</string>

  <!-- Settings Fragment -->
  <string name="settings">Settings</string>
  <string name="settings_save">Save</string>
  <string name="settings_firstname">First Name</string>
  <string name="settings_lastname">Last Name</string>
  <string name="empty_modifications_text">No Modifications For This Item</string>
  <string name="guest_mode">Guest</string>

  <!-- Restaurant Activity -->
  <string name="info">Info</string>
  <string name="restaurant_address_hours">Open from %1$s to %2$s</string>
  <string name="restaurant_phone">Contact us at %1$s</string>

  <string name="review_saved">Review Saved</string>
  <string name="reported">Reported</string>
  <string name="liked">Liked</string>
  <string name="eaten_this">I\'ve Eaten this!</string>
  <string name="call">Call</string>

</resources>